Procedimento de todos os caminhos possiveis entre dois pontos concluidos. Preciso realizar testes finais no JUnit.

--- a/bin/classes/META-INF/maven/net.itr2/ProblemOne/pom.xml
+++ b/bin/classes/META-INF/maven/net.itr2/ProblemOne/pom.xml
@@ -10,7 +10,7 @@
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<directory>bin</directory>
-		<defaultGoal>test</defaultGoal>
+		<defaultGoal>install</defaultGoal>
 		<resources>
 
 			<resource>
